--- a/public/index.html
+++ b/public/index.html
@@ -16,21 +16,21 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.getRegistrations()
-    .then(function(registrations) {
-       for(let registration of registrations) {
-          registration.unregister();
-       }
-    });
- } 
-// Clear cache (not recommended for security reasons)
-caches.keys().then(function(cacheNames) {
-    cacheNames.forEach(function(cacheName) {
-        caches.delete(cacheName);
-        // console.log("Cleared");
-    });
-});
+//     if ('serviceWorker' in navigator) {
+//     navigator.serviceWorker.getRegistrations()
+//     .then(function(registrations) {
+//        for(let registration of registrations) {
+//           registration.unregister();
+//        }
+//     });
+//  } 
+// // Clear cache (not recommended for security reasons)
+// caches.keys().then(function(cacheNames) {
+//     cacheNames.forEach(function(cacheName) {
+//         caches.delete(cacheName);
+//         // console.log("Cleared");
+//     });
+// });
     </script>
 </body>
 
